runs/runs/github.com/ozguramac/MITDataScience-CaseStudy6.1/logs/test-notebook-NewYorkCity_taxi_case_study.ipynb-2020-07-13T10.58.txt
[I 200713 10:59:08 inrepo:36] Testing notebook NewYorkCity_taxi_case_study.ipynb
[W 200713 10:59:08 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200713 10:59:08 inrepo:60] Using kernel python3 to provide language: python
[I 200713 10:59:09 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import featuretools as ft
import utils
from utils import load_nyc_taxi_data, compute_features, preview, feature_importances
from sklearn.ensemble import GradientBoostingRegressor
from featuretools.primitives import (Weekend, Minute, Hour, Day, Week, Month,
                                     Weekday, Weekend, Count, Sum, Mean, Median, Std, Min, Max)
import numpy as np
ft.__version__
%load_ext autoreload
%autoreload 2
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m"/srv/conda/envs/notebook/lib/python3.7/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m3319[0m, in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

[0;36m  File [0;32m"<ipython-input-1-71da91b536d1>"[0;36m, line [0;32m2[0;36m, in [0;35m<module>[0;36m[0m
[0;31m    import utils[0m

[0;36m  File [0;32m"/home/vildeeide/utils.py"[0;36m, line [0;32m27[0m
[0;31m    print "%d: Feature: %s, %.3f" % (i+1, f[0], f[1])[0m
[0m                                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (utils.py, line 27)


Container exited with status: {'Error': None, 'StatusCode': 1}
